--- a/ProblemSolving.csproj
+++ b/ProblemSolving.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Solutions\ProblemSolving.Solutions.csproj" />
+  </ItemGroup>
+
 </Project>
